<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/dialog_background"
    android:layout_gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_agregar_tarea"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="10dp"
        android:textAlignment="center"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_actividad"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <AutoCompleteTextView
                android:id="@+id/RegistroActividad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/hint_seleccionar_actividad"
                android:textColor="@color/black"
                android:textColorHint="#757575"
                android:drawableEnd="@drawable/flecha_desplegable"
                android:padding="8dp"/>

            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_materia"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="8dp"/>

            <AutoCompleteTextView
                android:id="@+id/RegistroMateria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:textColor="@color/black"
                android:textColorHint="#757575"
                android:hint="@string/label_materia"
                android:focusable="false"
                android:clickable="true"
                android:drawableEnd="@drawable/flecha_desplegable"
                android:padding="8dp"/>

            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_estado"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="8dp"/>

            <AutoCompleteTextView
                android:id="@+id/EstadoActividad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:textColor="@color/black"
                android:textColorHint="#757575"
                android:hint="@string/hint_seleccionar_estado"
                android:focusable="false"
                android:clickable="true"
                android:drawableEnd="@drawable/flecha_desplegable"
                android:padding="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_fecha"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginTop="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_dia_entrega"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="8dp"/>
            <EditText
                android:id="@+id/DiaEntrega"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/hint_seleccionar_fecha"
                android:textColor="@color/black"
                android:textColorHint="#757575"
                android:focusable="false"
                android:clickable="true"
                android:drawableEnd="@drawable/flecha_desplegable"
                android:padding="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_hora_inicio"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="8dp"/>

            <EditText
                android:id="@+id/HoraInicio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="--:-- AM/PM"
                android:textColorHint="#757575"
                android:textColor="@color/black"
                android:paddingVertical="8dp"
                android:focusable="false"
                android:clickable="true"
                android:cursorVisible="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_descripcion"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="8dp"/>

            <EditText
                android:id="@+id/TextDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_escribir_descripcion"
                android:textColor="@color/black"
                android:textColorHint="#757575"
                android:background="@drawable/recuadro_descripcion"
                android:minHeight="100dp"
                android:maxLines="5"
                android:scrollbars="vertical"
                android:layout_gravity="top"
                android:inputType="textMultiLine"
                android:gravity="top"
                android:padding="10dp"/>


        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginTop="20dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDialogCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancelar"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:background="@drawable/btn_cancelar"
            android:paddingHorizontal="25dp"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:paddingVertical="10dp"
            android:layout_marginEnd="10dp"
            app:backgroundTint="@null"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDialogGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_guardar"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:background="@drawable/btn_guardar"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:paddingVertical="10dp"
            android:paddingHorizontal="25dp"
            app:backgroundTint="@null"/>
    </LinearLayout>

</LinearLayout>