<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/dialog_background"
    android:layout_gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_ver_actividad"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="10dp"
        android:textAlignment="center"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_actividad"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <AutoCompleteTextView
                android:id="@+id/RegistroActividad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/hint_seleccionar_actividad"
                android:textColor="@color/black"
                android:padding="8dp"
                android:focusable="false"/>

            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_materia"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="8dp"/>

            <AutoCompleteTextView
                android:id="@+id/RegistroMateria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:textColor="@color/black"
                android:hint="@string/label_materia"
                android:padding="8dp"
                android:focusable="false"/>

            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_estado"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="8dp"/>

            <AutoCompleteTextView
                android:id="@+id/EstadoActividad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:textColor="@color/black"
                android:hint="@string/label_estado"
                android:padding="8dp"
                android:focusable="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_fecha"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginTop="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_dia_entrega"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="8dp"/>
            <EditText
                android:id="@+id/DiaEntrega"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/label_fecha"
                android:textColor="@color/black"
                android:padding="8dp"
                android:focusable="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_hora_entrega"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="8dp"/>

            <EditText
                android:id="@+id/HoraInicio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="--:-- AM/PM"
                android:textColor="@color/black"
                android:paddingVertical="8dp"
                android:focusable="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_descripcion"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="8dp"/>

            <EditText
                android:id="@+id/TextDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_descripcion"
                android:textColor="@color/black"
                android:background="@drawable/recuadro_descripcion"
                android:minHeight="100dp"
                android:maxLines="5"
                android:gravity="top"
                android:padding="10dp"
                android:focusable="false"/>

        </LinearLayout>
    </ScrollView>

    <!-- SECCIÓN DE EMOJIS CENTRADA -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnEliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:padding="10dp"
            android:text="🗑️"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/btnEditar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:padding="10dp"
            android:text="✏️"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/btnCancelarIcono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:padding="10dp"
            android:text="❌"
            android:textSize="32sp" />
    </LinearLayout>

</LinearLayout>